documentation: create swagger for provider login methods
